@@ -1,5 +1,8 @@
 2002-08-02  Lars Clausen  <lrclause@cs.uiuc.edu>
 
+	* app/commands.c (edit_cut_text_callback): 
+	* lib/text.c (text_delete_all): Now functioning undo for text cut.
+	
 	* app/commands.c (edit_cut_text_callback): Now removes text.
 	Undo is broken, though.
 
